--- a/shortsym.tex
+++ b/shortsym.tex
@@ -1,7 +1,7 @@
 \documentclass[]{article}
 % \usepackage[osf,sc]{mathpazo}
 % \usepackage{eulervm}
-
+\usepackage{verbatimbox}
 \usepackage{shortsym}
 \usepackage{booktabs}
 
@@ -9,17 +9,38 @@
 \author{H.\ Onur Solmaz}
 \begin{document}
 \maketitle
-\section{Symbol Macros}
+
+\begin{myverbbox}{\lineA}
+\bm{\mathrm{A}}
+\end{myverbbox}
+
+\begin{myverbbox}{\lineB}
+\VA
+\end{myverbbox}
+
+\begin{myverbbox}{\lineC}
+\VB, \VC
+\end{myverbbox}
+
 
 This package aims to make typing of symbols much easier by providing some macros
-prefixing conventions for different math alphabets. For example to type in a
+that use prefixes for different math alphabets.
+
+For example to type in an
 upright bold A, one can use the \verb+\VA+ macro which prefixes the letter A
 with the macro character \verb+\+ and the letter \verb+V+, which has been chosen
 as the convention for ``upright bold'' math symbols.
 
+\begin{alignat*}{4}
+  &\text{Normally,}  & \lineA \quad &\Rightarrow \quad && \VA. \\
+  &\text{With shortsym,} \quad  & \lineB \quad &\Rightarrow \quad && \VA, \\
+  &\text{similarly,}  & \lineC \quad &\Rightarrow \quad && \VB, \VC \\
+  &\text{and so on.}  &  & &&  \\
+\end{alignat*}
+
 These conventions have been chosen to reduce the number of characters typed,
-whereas also to make sure the equations stay readable in code. For example, one might guess
-the letter B might stand for bold and I might stand for italic in some prefixes,
+while making sure the equations stay readable in code. For example, one might guess
+the letter \texttt{B} might stand for bold and \texttt{I} might stand for italic in some prefixes,
 but the prefixes don't have to make sense for all alphabets.
 For the list of all prefixes for
 specific alphabets, please refer to Table~\ref{tb:math}.
@@ -35,39 +56,36 @@ For numbers, the written forms can be prefixed to obtain corresponding symbols,
 like \verb+\Vone+ and \verb+\Izero+. Observe the samples in Table~\ref{tb:math}
 for alphabets in which this is possible.
 
-
 \begin{table}[htbp]
-  \centering
+  \hspace{-1.8cm}
   \begin{tabular}{p{14em} l l l l}
     \toprule
     Name & \LaTeX{} package & Prefix & Shorthand for & Sample \\
     \midrule
-    Normal letters & none & none & none & $ABCdef$ \\
-    Upright letters & none & \verb+\U+ & \verb+\mathrm{*}+ & $\UA\UB\UC\Ud\Ue\Uf$\\
-    Bold letters & none & \verb+\B+ & \verb+\boldsymbol{*}+ & $\BA\BB\BC\Bd\Be\Bf\Bone\Btwo\Bthree$ \\
-    Upright bold letters & none & \verb+\V+ & \verb+\boldsymbol{\mathrm{*}}+ & $\VA\VB\VC\Vd\Ve\Vf\Vone\Vtwo\Vthree$ \\
-    Sans serif & none & \verb+\F+ & & $\FA\FB\FC\Fd\Fe\Ff$\\
-    Bold sans serif & none & \verb+\BF+ & & $\BFA\BFB\BFC\BFd\BFe\BFf$\\
-    AMS blackboard bold* & \texttt{amsfonts} & \verb+\I+ & & $\IA\IB\IC$ \\
-    % \texttt{bbold} blackboard bold & \texttt{bbold},\texttt{mathbbol} & \verb+\II+ & $\IIA\IIB\IIC\IId\IIe\IIf\IIone\IItwo\IIthree$ \\
-    \texttt{bbm} blackboard bold sans & \texttt{bbm} & \verb+\BB+ & & $\BBA\BBB\BBC\BBd\BBe\BBf$ \\
-    \texttt{bbm} blackboard bold serif & \texttt{bbm} & \verb+\bB+ & & $\bBA\bBB\bBC\bBd\bBe\bBf$\\
-    \texttt{bbm} blackboard bold sans italic & \texttt{bbm} & \verb+\IB+ & & $\IBA\IBB\IBC\IBd\IBe\IBf$\\
-    \texttt{bbm} blackboard bold serif italic & \texttt{bbm} & \verb+\iB+ & & $\iBA\iBB\iBC\iBd\iBe\iBf$\\
-    % Ralph Smith’s Formal Script* & \texttt{rsfs} & \verb+\ral+ & $\ralA\ralB\ralC$\\
-    % Ralph Smith’s Formal Script bold* & \texttt{rsfs} & \verb+\Bral+ & $\BralA\BralB\BralC$\\
-    % \texttt{euscript} cursive* & \texttt{euscript} & \verb+\eul+ & $\eulA\eulB\eulC$\\
-    % \texttt{euscript} cursive bold* & \texttt{euscript} & \verb+\Beul+ & $\BeulA\BeulB\BeulC$\\
-    Calligraphic letters* & none & \verb+\C+ & & $\CA\CB\CC$ \\
-    Calligraphic bold letters* & none & \verb+\BC+ & & $\BCA\BCB\BCC$ \\
-    Fraktur & \texttt{amsfonts} & \verb+\frak+ & & $\frakA\frakB\frakC\fraka\frakb\frakc$\\
-    Fraktur bold & \texttt{amsfonts} & \verb+\Bfrak+ & & $\BfrakA\BfrakB\BfrakC\Bfraka\Bfrakb\Bfrakc$\\
+    Upright letters & \texttt{amsmath} & \verb+\U+ & \verb+\mathrm{*}+ & $\UA\UB\UC\Ud\Ue\Uf\Uone\Utwo\Uthree$\\
+    Italic letters & \texttt{amsmath} & \verb+\S+ & \verb+\mathit{*}+ & $\JA\JB\JC\Jd\Je\Jf\Jone\Jtwo\Jthree$ \\
+    Bold letters & \texttt{amsmath} & \verb+\V+ & \verb+\bm{\mathrm{*}}+ & $\VA\VB\VC\Vd\Ve\Vf\Vone\Vtwo\Vthree$ \\
+    Bold italic letters & \texttt{amsmath} & \verb+\B+ & \verb+\bm{*}+ & $\BA\BB\BC\Bd\Be\Bf\Bone\Btwo\Bthree$ \\
+    Sans serif & \texttt{amsmath} & \verb+\F+ & \verb+\mathsf{*}+ & $\FA\FB\FC\Fd\Fe\Ff\Fone\Ftwo\Fthree$\\
+    Bold sans serif & \texttt{amsmath} & \verb+\BF+ & \verb+\bm{\mathsf{*}}+ & $\BFA\BFB\BFC\BFd\BFe\BFf\BFone\BFtwo\BFthree$\\
+    AMS blackboard bold* & \texttt{amsfonts} & \verb+\I+ & \verb+\mathbb{*}+ & $\IA\IB\IC$ \\
+    % \texttt{bbold} blackboard bold & \texttt{bbold},\texttt{mathbbol} & % \verb+\II+ \verb++ & $\IIA\IIB\IIC\IId\IIe\IIf\IIone\IItwo\IIthree$ \\
+    \texttt{bbm} blackboard bold serif & \texttt{bbm} & \verb+\bB+ & \verb+\mathbbm{*}+ & $\bBA\bBB\bBC\bBd\bBe\bBf\bBone\bBtwo\bBthree$\\
+    \texttt{bbm} blackboard bold sans & \texttt{bbm} & \verb+\BB+ & \verb+\mathbbmss{*}+ & $\BBA\BBB\BBC\BBd\BBe\BBf\BBone\BBtwo\BBthree$ \\
+    % \texttt{bbm} blackboard bold sans italic & \texttt{bbm} & \verb+\IB+ & \verb++ & $\IBA\IBB\IBC\IBd\IBe\IBf$\\
+    % \texttt{bbm} blackboard bold serif italic & \texttt{bbm} & \verb+\iB+ & \verb++ & $\iBA\iBB\iBC\iBd\iBe\iBf$\\
+    % \texttt{euscript} cursive* & \texttt{euscript} & \verb+\eul+ \verb++ & $\eulA\eulB\eulC$\\
+    % \texttt{euscript} cursive bold* & \texttt{euscript} & \verb+\Beul+ \verb++ & $\BeulA\BeulB\BeulC$\\
+    Calligraphic letters* & \texttt{amsmath} & \verb+\C+ & \verb+\mathcal{*}+ & $\CA\CB\CC$ \\
+    Calligraphic bold letters* & \texttt{amsmath} & \verb+\BC+ & \verb+\bm{\mathcal{*}}+ & $\BCA\BCB\BCC$ \\
+    Fraktur & \texttt{amsfonts} & \verb+\fr+ & \verb+\mathfrak{*}+ & $\frA\frB\frC\fra\frb\frc\frone\frtwo\frthree$\\
+    Fraktur bold & \texttt{amsfonts} & \verb+\Bfr+ & \verb+\bm{\mathfrak{*}}+ & $\BfrA\BfrB\BfrC\Bfra\Bfrb\Bfrc\Bfrone\Bfrtwo\Bfrthree$\\
     \bottomrule
   \end{tabular}
   \caption{Guide for symbol prefixes for latin letters. For more information about math alphabets,
-    please refer to {\em Table 213 -- Math Alphabets} of The
-    Comprehensive \LaTeX{} Symbol List by Scott Pakin. The shorthands marked with *
-    are for uppercase letters only.}
+    please refer to {\em Math Alphabets} table of
+    \emph{The Comprehensive \LaTeX{} Symbol List by Scott Pakin}.
+    The shorthands marked with * are for uppercase letters only.}
   \label{tb:math}
 \end{table}
 
