--- a/shortsym_bbm.sty
+++ b/shortsym_bbm.sty
@@ -53,6 +53,18 @@
 \newcommand{\bBy}{\mathbbm{y}}
 \newcommand{\bBz}{\mathbbm{z}}
 
+\newcommand{\bBzero }{\mathbbm{0}}
+\newcommand{\bBone  }{\mathbbm{1}}
+\newcommand{\bBtwo  }{\mathbbm{2}}
+\newcommand{\bBthree}{\mathbbm{3}}
+\newcommand{\bBfour }{\mathbbm{4}}
+\newcommand{\bBfive }{\mathbbm{5}}
+\newcommand{\bBsix  }{\mathbbm{6}}
+\newcommand{\bBseven}{\mathbbm{7}}
+\newcommand{\bBeight}{\mathbbm{8}}
+\newcommand{\bBnine }{\mathbbm{9}}
+
+
 % bbm blackboard bold sans
 % \DeclareMathAlphabet{\bbmbboldsans}{U}{bbmss}{m}{n}
 \newcommand{\BBA}{\mathbbmss{A}}
@@ -108,113 +120,125 @@
 \newcommand{\BBy}{\mathbbmss{y}}
 \newcommand{\BBz}{\mathbbmss{z}}
 
-% bbm blackboard bold serif italic
-\DeclareMathAlphabet{\bbmbboldserifitalic}{U}{bbm}{m}{sl}
-\newcommand{\iBA}{{\bbmbboldserifitalic A}}
-\newcommand{\iBB}{{\bbmbboldserifitalic B}}
-\newcommand{\iBC}{{\bbmbboldserifitalic C}}
-\newcommand{\iBD}{{\bbmbboldserifitalic D}}
-\newcommand{\iBE}{{\bbmbboldserifitalic E}}
-\newcommand{\iBF}{{\bbmbboldserifitalic F}}
-\newcommand{\iBG}{{\bbmbboldserifitalic G}}
-\newcommand{\iBH}{{\bbmbboldserifitalic H}}
-\newcommand{\iBI}{{\bbmbboldserifitalic I}}
-\newcommand{\iBJ}{{\bbmbboldserifitalic J}}
-\newcommand{\iBK}{{\bbmbboldserifitalic K}}
-\newcommand{\iBL}{{\bbmbboldserifitalic L}}
-\newcommand{\iBM}{{\bbmbboldserifitalic M}}
-\newcommand{\iBN}{{\bbmbboldserifitalic N}}
-\newcommand{\iBO}{{\bbmbboldserifitalic O}}
-\newcommand{\iBP}{{\bbmbboldserifitalic P}}
-\newcommand{\iBQ}{{\bbmbboldserifitalic Q}}
-\newcommand{\iBR}{{\bbmbboldserifitalic R}}
-\newcommand{\iBS}{{\bbmbboldserifitalic S}}
-\newcommand{\iBT}{{\bbmbboldserifitalic T}}
-\newcommand{\iBU}{{\bbmbboldserifitalic U}}
-\newcommand{\iBV}{{\bbmbboldserifitalic V}}
-\newcommand{\iBW}{{\bbmbboldserifitalic W}}
-\newcommand{\iBX}{{\bbmbboldserifitalic X}}
-\newcommand{\iBY}{{\bbmbboldserifitalic Y}}
-\newcommand{\iBZ}{{\bbmbboldserifitalic Z}}
-\newcommand{\iBa}{{\bbmbboldserifitalic a}}
-\newcommand{\iBb}{{\bbmbboldserifitalic b}}
-\newcommand{\iBc}{{\bbmbboldserifitalic c}}
-\newcommand{\iBd}{{\bbmbboldserifitalic d}}
-\newcommand{\iBe}{{\bbmbboldserifitalic e}}
-\newcommand{\iBf}{{\bbmbboldserifitalic f}}
-\newcommand{\iBg}{{\bbmbboldserifitalic g}}
-\newcommand{\iBh}{{\bbmbboldserifitalic h}}
-\newcommand{\iBi}{{\bbmbboldserifitalic i}}
-\newcommand{\iBj}{{\bbmbboldserifitalic j}}
-\newcommand{\iBk}{{\bbmbboldserifitalic k}}
-\newcommand{\iBl}{{\bbmbboldserifitalic l}}
-\newcommand{\iBm}{{\bbmbboldserifitalic m}}
-\newcommand{\iBn}{{\bbmbboldserifitalic n}}
-\newcommand{\iBo}{{\bbmbboldserifitalic o}}
-\newcommand{\iBp}{{\bbmbboldserifitalic p}}
-\newcommand{\iBq}{{\bbmbboldserifitalic q}}
-\newcommand{\iBr}{{\bbmbboldserifitalic r}}
-\newcommand{\iBs}{{\bbmbboldserifitalic s}}
-\newcommand{\iBt}{{\bbmbboldserifitalic t}}
-\newcommand{\iBu}{{\bbmbboldserifitalic u}}
-\newcommand{\iBv}{{\bbmbboldserifitalic v}}
-\newcommand{\iBw}{{\bbmbboldserifitalic w}}
-\newcommand{\iBx}{{\bbmbboldserifitalic x}}
-\newcommand{\iBy}{{\bbmbboldserifitalic y}}
-\newcommand{\iBz}{{\bbmbboldserifitalic z}}
+\newcommand{\BBzero }{\mathbbmss{0}}
+\newcommand{\BBone  }{\mathbbmss{1}}
+\newcommand{\BBtwo  }{\mathbbmss{2}}
+\newcommand{\BBthree}{\mathbbmss{3}}
+\newcommand{\BBfour }{\mathbbmss{4}}
+\newcommand{\BBfive }{\mathbbmss{5}}
+\newcommand{\BBsix  }{\mathbbmss{6}}
+\newcommand{\BBseven}{\mathbbmss{7}}
+\newcommand{\BBeight}{\mathbbmss{8}}
+\newcommand{\BBnine }{\mathbbmss{9}}
 
-% bbm blackboard bold sans italic
-\DeclareMathAlphabet{\bbmbboldsansitalic}{U}{bbmss}{m}{it}
-\newcommand{\IBA}{{\bbmbboldsansitalic A}}
-\newcommand{\IBB}{{\bbmbboldsansitalic B}}
-\newcommand{\IBC}{{\bbmbboldsansitalic C}}
-\newcommand{\IBD}{{\bbmbboldsansitalic D}}
-\newcommand{\IBE}{{\bbmbboldsansitalic E}}
-\newcommand{\IBF}{{\bbmbboldsansitalic F}}
-\newcommand{\IBG}{{\bbmbboldsansitalic G}}
-\newcommand{\IBH}{{\bbmbboldsansitalic H}}
-\newcommand{\IBI}{{\bbmbboldsansitalic I}}
-\newcommand{\IBJ}{{\bbmbboldsansitalic J}}
-\newcommand{\IBK}{{\bbmbboldsansitalic K}}
-\newcommand{\IBL}{{\bbmbboldsansitalic L}}
-\newcommand{\IBM}{{\bbmbboldsansitalic M}}
-\newcommand{\IBN}{{\bbmbboldsansitalic N}}
-\newcommand{\IBO}{{\bbmbboldsansitalic O}}
-\newcommand{\IBP}{{\bbmbboldsansitalic P}}
-\newcommand{\IBQ}{{\bbmbboldsansitalic Q}}
-\newcommand{\IBR}{{\bbmbboldsansitalic R}}
-\newcommand{\IBS}{{\bbmbboldsansitalic S}}
-\newcommand{\IBT}{{\bbmbboldsansitalic T}}
-\newcommand{\IBU}{{\bbmbboldsansitalic U}}
-\newcommand{\IBV}{{\bbmbboldsansitalic V}}
-\newcommand{\IBW}{{\bbmbboldsansitalic W}}
-\newcommand{\IBX}{{\bbmbboldsansitalic X}}
-\newcommand{\IBY}{{\bbmbboldsansitalic Y}}
-\newcommand{\IBZ}{{\bbmbboldsansitalic Z}}
-\newcommand{\IBa}{{\bbmbboldsansitalic a}}
-\newcommand{\IBb}{{\bbmbboldsansitalic b}}
-\newcommand{\IBc}{{\bbmbboldsansitalic c}}
-\newcommand{\IBd}{{\bbmbboldsansitalic d}}
-\newcommand{\IBe}{{\bbmbboldsansitalic e}}
-\newcommand{\IBf}{{\bbmbboldsansitalic f}}
-\newcommand{\IBg}{{\bbmbboldsansitalic g}}
-\newcommand{\IBh}{{\bbmbboldsansitalic h}}
-\newcommand{\IBi}{{\bbmbboldsansitalic i}}
-\newcommand{\IBj}{{\bbmbboldsansitalic j}}
-\newcommand{\IBk}{{\bbmbboldsansitalic k}}
-\newcommand{\IBl}{{\bbmbboldsansitalic l}}
-\newcommand{\IBm}{{\bbmbboldsansitalic m}}
-\newcommand{\IBn}{{\bbmbboldsansitalic n}}
-\newcommand{\IBo}{{\bbmbboldsansitalic o}}
-\newcommand{\IBp}{{\bbmbboldsansitalic p}}
-\newcommand{\IBq}{{\bbmbboldsansitalic q}}
-\newcommand{\IBr}{{\bbmbboldsansitalic r}}
-\newcommand{\IBs}{{\bbmbboldsansitalic s}}
-\newcommand{\IBt}{{\bbmbboldsansitalic t}}
-\newcommand{\IBu}{{\bbmbboldsansitalic u}}
-\newcommand{\IBv}{{\bbmbboldsansitalic v}}
-\newcommand{\IBw}{{\bbmbboldsansitalic w}}
-\newcommand{\IBx}{{\bbmbboldsansitalic x}}
-\newcommand{\IBy}{{\bbmbboldsansitalic y}}
-\newcommand{\IBz}{{\bbmbboldsansitalic z}}
+
+% % bbm blackboard bold serif italic
+% \DeclareMathAlphabet{\bbmbboldserifitalic}{U}{bbm}{m}{sl}
+% \newcommand{\iBA}{{\bbmbboldserifitalic A}}
+% \newcommand{\iBB}{{\bbmbboldserifitalic B}}
+% \newcommand{\iBC}{{\bbmbboldserifitalic C}}
+% \newcommand{\iBD}{{\bbmbboldserifitalic D}}
+% \newcommand{\iBE}{{\bbmbboldserifitalic E}}
+% \newcommand{\iBF}{{\bbmbboldserifitalic F}}
+% \newcommand{\iBG}{{\bbmbboldserifitalic G}}
+% \newcommand{\iBH}{{\bbmbboldserifitalic H}}
+% \newcommand{\iBI}{{\bbmbboldserifitalic I}}
+% \newcommand{\iBJ}{{\bbmbboldserifitalic J}}
+% \newcommand{\iBK}{{\bbmbboldserifitalic K}}
+% \newcommand{\iBL}{{\bbmbboldserifitalic L}}
+% \newcommand{\iBM}{{\bbmbboldserifitalic M}}
+% \newcommand{\iBN}{{\bbmbboldserifitalic N}}
+% \newcommand{\iBO}{{\bbmbboldserifitalic O}}
+% \newcommand{\iBP}{{\bbmbboldserifitalic P}}
+% \newcommand{\iBQ}{{\bbmbboldserifitalic Q}}
+% \newcommand{\iBR}{{\bbmbboldserifitalic R}}
+% \newcommand{\iBS}{{\bbmbboldserifitalic S}}
+% \newcommand{\iBT}{{\bbmbboldserifitalic T}}
+% \newcommand{\iBU}{{\bbmbboldserifitalic U}}
+% \newcommand{\iBV}{{\bbmbboldserifitalic V}}
+% \newcommand{\iBW}{{\bbmbboldserifitalic W}}
+% \newcommand{\iBX}{{\bbmbboldserifitalic X}}
+% \newcommand{\iBY}{{\bbmbboldserifitalic Y}}
+% \newcommand{\iBZ}{{\bbmbboldserifitalic Z}}
+% \newcommand{\iBa}{{\bbmbboldserifitalic a}}
+% \newcommand{\iBb}{{\bbmbboldserifitalic b}}
+% \newcommand{\iBc}{{\bbmbboldserifitalic c}}
+% \newcommand{\iBd}{{\bbmbboldserifitalic d}}
+% \newcommand{\iBe}{{\bbmbboldserifitalic e}}
+% \newcommand{\iBf}{{\bbmbboldserifitalic f}}
+% \newcommand{\iBg}{{\bbmbboldserifitalic g}}
+% \newcommand{\iBh}{{\bbmbboldserifitalic h}}
+% \newcommand{\iBi}{{\bbmbboldserifitalic i}}
+% \newcommand{\iBj}{{\bbmbboldserifitalic j}}
+% \newcommand{\iBk}{{\bbmbboldserifitalic k}}
+% \newcommand{\iBl}{{\bbmbboldserifitalic l}}
+% \newcommand{\iBm}{{\bbmbboldserifitalic m}}
+% \newcommand{\iBn}{{\bbmbboldserifitalic n}}
+% \newcommand{\iBo}{{\bbmbboldserifitalic o}}
+% \newcommand{\iBp}{{\bbmbboldserifitalic p}}
+% \newcommand{\iBq}{{\bbmbboldserifitalic q}}
+% \newcommand{\iBr}{{\bbmbboldserifitalic r}}
+% \newcommand{\iBs}{{\bbmbboldserifitalic s}}
+% \newcommand{\iBt}{{\bbmbboldserifitalic t}}
+% \newcommand{\iBu}{{\bbmbboldserifitalic u}}
+% \newcommand{\iBv}{{\bbmbboldserifitalic v}}
+% \newcommand{\iBw}{{\bbmbboldserifitalic w}}
+% \newcommand{\iBx}{{\bbmbboldserifitalic x}}
+% \newcommand{\iBy}{{\bbmbboldserifitalic y}}
+% \newcommand{\iBz}{{\bbmbboldserifitalic z}}
+
+% % bbm blackboard bold sans italic
+% \DeclareMathAlphabet{\bbmbboldsansitalic}{U}{bbmss}{m}{it}
+% \newcommand{\IBA}{{\bbmbboldsansitalic A}}
+% \newcommand{\IBB}{{\bbmbboldsansitalic B}}
+% \newcommand{\IBC}{{\bbmbboldsansitalic C}}
+% \newcommand{\IBD}{{\bbmbboldsansitalic D}}
+% \newcommand{\IBE}{{\bbmbboldsansitalic E}}
+% \newcommand{\IBF}{{\bbmbboldsansitalic F}}
+% \newcommand{\IBG}{{\bbmbboldsansitalic G}}
+% \newcommand{\IBH}{{\bbmbboldsansitalic H}}
+% \newcommand{\IBI}{{\bbmbboldsansitalic I}}
+% \newcommand{\IBJ}{{\bbmbboldsansitalic J}}
+% \newcommand{\IBK}{{\bbmbboldsansitalic K}}
+% \newcommand{\IBL}{{\bbmbboldsansitalic L}}
+% \newcommand{\IBM}{{\bbmbboldsansitalic M}}
+% \newcommand{\IBN}{{\bbmbboldsansitalic N}}
+% \newcommand{\IBO}{{\bbmbboldsansitalic O}}
+% \newcommand{\IBP}{{\bbmbboldsansitalic P}}
+% \newcommand{\IBQ}{{\bbmbboldsansitalic Q}}
+% \newcommand{\IBR}{{\bbmbboldsansitalic R}}
+% \newcommand{\IBS}{{\bbmbboldsansitalic S}}
+% \newcommand{\IBT}{{\bbmbboldsansitalic T}}
+% \newcommand{\IBU}{{\bbmbboldsansitalic U}}
+% \newcommand{\IBV}{{\bbmbboldsansitalic V}}
+% \newcommand{\IBW}{{\bbmbboldsansitalic W}}
+% \newcommand{\IBX}{{\bbmbboldsansitalic X}}
+% \newcommand{\IBY}{{\bbmbboldsansitalic Y}}
+% \newcommand{\IBZ}{{\bbmbboldsansitalic Z}}
+% \newcommand{\IBa}{{\bbmbboldsansitalic a}}
+% \newcommand{\IBb}{{\bbmbboldsansitalic b}}
+% \newcommand{\IBc}{{\bbmbboldsansitalic c}}
+% \newcommand{\IBd}{{\bbmbboldsansitalic d}}
+% \newcommand{\IBe}{{\bbmbboldsansitalic e}}
+% \newcommand{\IBf}{{\bbmbboldsansitalic f}}
+% \newcommand{\IBg}{{\bbmbboldsansitalic g}}
+% \newcommand{\IBh}{{\bbmbboldsansitalic h}}
+% \newcommand{\IBi}{{\bbmbboldsansitalic i}}
+% \newcommand{\IBj}{{\bbmbboldsansitalic j}}
+% \newcommand{\IBk}{{\bbmbboldsansitalic k}}
+% \newcommand{\IBl}{{\bbmbboldsansitalic l}}
+% \newcommand{\IBm}{{\bbmbboldsansitalic m}}
+% \newcommand{\IBn}{{\bbmbboldsansitalic n}}
+% \newcommand{\IBo}{{\bbmbboldsansitalic o}}
+% \newcommand{\IBp}{{\bbmbboldsansitalic p}}
+% \newcommand{\IBq}{{\bbmbboldsansitalic q}}
+% \newcommand{\IBr}{{\bbmbboldsansitalic r}}
+% \newcommand{\IBs}{{\bbmbboldsansitalic s}}
+% \newcommand{\IBt}{{\bbmbboldsansitalic t}}
+% \newcommand{\IBu}{{\bbmbboldsansitalic u}}
+% \newcommand{\IBv}{{\bbmbboldsansitalic v}}
+% \newcommand{\IBw}{{\bbmbboldsansitalic w}}
+% \newcommand{\IBx}{{\bbmbboldsansitalic x}}
+% \newcommand{\IBy}{{\bbmbboldsansitalic y}}
+% \newcommand{\IBz}{{\bbmbboldsansitalic z}}
 
