--- a/shortsym_bold.sty
+++ b/shortsym_bold.sty
@@ -1,66 +1,66 @@
 % Bold italic letters
-\newcommand{\BA}{\boldsymbol{A}}
-\newcommand{\BB}{\boldsymbol{B}}
-\newcommand{\BC}{\boldsymbol{C}}
-\newcommand{\BD}{\boldsymbol{D}}
-\newcommand{\BE}{\boldsymbol{E}}
-\newcommand{\BF}{\boldsymbol{F}}
-\newcommand{\BG}{\boldsymbol{G}}
-\newcommand{\BH}{\boldsymbol{H}}
-\newcommand{\BI}{\boldsymbol{I}}
-\newcommand{\BJ}{\boldsymbol{J}}
-\newcommand{\BK}{\boldsymbol{K}}
-\newcommand{\BL}{\boldsymbol{L}}
-\newcommand{\BM}{\boldsymbol{M}}
-\newcommand{\BN}{\boldsymbol{N}}
-\newcommand{\BO}{\boldsymbol{O}}
-\newcommand{\BP}{\boldsymbol{P}}
-\newcommand{\BQ}{\boldsymbol{Q}}
-\newcommand{\BR}{\boldsymbol{R}}
-\newcommand{\BS}{\boldsymbol{S}}
-\newcommand{\BT}{\boldsymbol{T}}
-\newcommand{\BU}{\boldsymbol{U}}
-\newcommand{\BV}{\boldsymbol{V}}
-\newcommand{\BW}{\boldsymbol{W}}
-\newcommand{\BX}{\boldsymbol{X}}
-\newcommand{\BY}{\boldsymbol{Y}}
-\newcommand{\BZ}{\boldsymbol{Z}}
-\newcommand{\Ba}{\boldsymbol{a}}
-\newcommand{\Bb}{\boldsymbol{b}}
-\newcommand{\Bc}{\boldsymbol{c}}
-\newcommand{\Bd}{\boldsymbol{d}}
-\newcommand{\Be}{\boldsymbol{e}}
-\newcommand{\Bf}{\boldsymbol{f}}
-\newcommand{\Bg}{\boldsymbol{g}}
-\newcommand{\Bh}{\boldsymbol{h}}
-\newcommand{\Bi}{\boldsymbol{i}}
-\newcommand{\Bj}{\boldsymbol{j}}
-\newcommand{\Bk}{\boldsymbol{k}}
-\newcommand{\Bl}{\boldsymbol{l}}
-\newcommand{\Bm}{\boldsymbol{m}}
-\newcommand{\Bn}{\boldsymbol{n}}
-\newcommand{\Bo}{\boldsymbol{o}}
-\newcommand{\Bp}{\boldsymbol{p}}
-\newcommand{\Bq}{\boldsymbol{q}}
-\newcommand{\Br}{\boldsymbol{r}}
-\newcommand{\Bs}{\boldsymbol{s}}
-\newcommand{\Bt}{\boldsymbol{t}}
-\newcommand{\Bu}{\boldsymbol{u}}
-\newcommand{\Bv}{\boldsymbol{v}}
-\newcommand{\Bw}{\boldsymbol{w}}
-\newcommand{\Bx}{\boldsymbol{x}}
-\newcommand{\By}{\boldsymbol{y}}
-\newcommand{\Bz}{\boldsymbol{z}}
+\newcommand{\BA}{\bm{A}}
+\newcommand{\BB}{\bm{B}}
+\newcommand{\BC}{\bm{C}}
+\newcommand{\BD}{\bm{D}}
+\newcommand{\BE}{\bm{E}}
+\newcommand{\BF}{\bm{F}}
+\newcommand{\BG}{\bm{G}}
+\newcommand{\BH}{\bm{H}}
+\newcommand{\BI}{\bm{I}}
+\newcommand{\BJ}{\bm{J}}
+\newcommand{\BK}{\bm{K}}
+\newcommand{\BL}{\bm{L}}
+\newcommand{\BM}{\bm{M}}
+\newcommand{\BN}{\bm{N}}
+\newcommand{\BO}{\bm{O}}
+\newcommand{\BP}{\bm{P}}
+\newcommand{\BQ}{\bm{Q}}
+\newcommand{\BR}{\bm{R}}
+\newcommand{\BS}{\bm{S}}
+\newcommand{\BT}{\bm{T}}
+\newcommand{\BU}{\bm{U}}
+\newcommand{\BV}{\bm{V}}
+\newcommand{\BW}{\bm{W}}
+\newcommand{\BX}{\bm{X}}
+\newcommand{\BY}{\bm{Y}}
+\newcommand{\BZ}{\bm{Z}}
+\newcommand{\Ba}{\bm{a}}
+\newcommand{\Bb}{\bm{b}}
+\newcommand{\Bc}{\bm{c}}
+\newcommand{\Bd}{\bm{d}}
+\newcommand{\Be}{\bm{e}}
+\newcommand{\Bf}{\bm{f}}
+\newcommand{\Bg}{\bm{g}}
+\newcommand{\Bh}{\bm{h}}
+\newcommand{\Bi}{\bm{i}}
+\newcommand{\Bj}{\bm{j}}
+\newcommand{\Bk}{\bm{k}}
+\newcommand{\Bl}{\bm{l}}
+\newcommand{\Bm}{\bm{m}}
+\newcommand{\Bn}{\bm{n}}
+\newcommand{\Bo}{\bm{o}}
+\newcommand{\Bp}{\bm{p}}
+\newcommand{\Bq}{\bm{q}}
+\newcommand{\Br}{\bm{r}}
+\newcommand{\Bs}{\bm{s}}
+\newcommand{\Bt}{\bm{t}}
+\newcommand{\Bu}{\bm{u}}
+\newcommand{\Bv}{\bm{v}}
+\newcommand{\Bw}{\bm{w}}
+\newcommand{\Bx}{\bm{x}}
+\newcommand{\By}{\bm{y}}
+\newcommand{\Bz}{\bm{z}}
 
 % bold italic numbers
-\newcommand{\Bzero }{\boldsymbol{\mathit{0}}}
-\newcommand{\Bone  }{\boldsymbol{\mathit{1}}}
-\newcommand{\Btwo  }{\boldsymbol{\mathit{2}}}
-\newcommand{\Bthree}{\boldsymbol{\mathit{3}}}
-\newcommand{\Bfour }{\boldsymbol{\mathit{4}}}
-\newcommand{\Bfive }{\boldsymbol{\mathit{5}}}
-\newcommand{\Bsix  }{\boldsymbol{\mathit{6}}}
-\newcommand{\Bseven}{\boldsymbol{\mathit{7}}}
-\newcommand{\Beight}{\boldsymbol{\mathit{8}}}
-\newcommand{\Bnine }{\boldsymbol{\mathit{9}}}
+\newcommand{\Bzero }{\bm{\mathit{0}}}
+\newcommand{\Bone  }{\bm{\mathit{1}}}
+\newcommand{\Btwo  }{\bm{\mathit{2}}}
+\newcommand{\Bthree}{\bm{\mathit{3}}}
+\newcommand{\Bfour }{\bm{\mathit{4}}}
+\newcommand{\Bfive }{\bm{\mathit{5}}}
+\newcommand{\Bsix  }{\bm{\mathit{6}}}
+\newcommand{\Bseven}{\bm{\mathit{7}}}
+\newcommand{\Beight}{\bm{\mathit{8}}}
+\newcommand{\Bnine }{\bm{\mathit{9}}}
 
