--- a/shortsym_cal_bold.sty
+++ b/shortsym_cal_bold.sty
@@ -1,27 +1,27 @@
 % Calligraphic bold
-\newcommand{\BCA}{\boldsymbol{\mathcal{A}}}
-\newcommand{\BCB}{\boldsymbol{\mathcal{B}}}
-\newcommand{\BCC}{\boldsymbol{\mathcal{C}}}
-\newcommand{\BCD}{\boldsymbol{\mathcal{D}}}
-\newcommand{\BCE}{\boldsymbol{\mathcal{E}}}
-\newcommand{\BCF}{\boldsymbol{\mathcal{F}}}
-\newcommand{\BCG}{\boldsymbol{\mathcal{G}}}
-\newcommand{\BCH}{\boldsymbol{\mathcal{H}}}
-\newcommand{\BCI}{\boldsymbol{\mathcal{I}}}
-\newcommand{\BCJ}{\boldsymbol{\mathcal{J}}}
-\newcommand{\BCK}{\boldsymbol{\mathcal{K}}}
-\newcommand{\BCL}{\boldsymbol{\mathcal{L}}}
-\newcommand{\BCM}{\boldsymbol{\mathcal{M}}}
-\newcommand{\BCN}{\boldsymbol{\mathcal{N}}}
-\newcommand{\BCO}{\boldsymbol{\mathcal{O}}}
-\newcommand{\BCP}{\boldsymbol{\mathcal{P}}}
-\newcommand{\BCQ}{\boldsymbol{\mathcal{Q}}}
-\newcommand{\BCR}{\boldsymbol{\mathcal{R}}}
-\newcommand{\BCS}{\boldsymbol{\mathcal{S}}}
-\newcommand{\BCT}{\boldsymbol{\mathcal{T}}}
-\newcommand{\BCU}{\boldsymbol{\mathcal{U}}}
-\newcommand{\BCV}{\boldsymbol{\mathcal{V}}}
-\newcommand{\BCW}{\boldsymbol{\mathcal{W}}}
-\newcommand{\BCX}{\boldsymbol{\mathcal{X}}}
-\newcommand{\BCY}{\boldsymbol{\mathcal{Y}}}
-\newcommand{\BCZ}{\boldsymbol{\mathcal{Z}}}
+\newcommand{\BCA}{\bm{\mathcal{A}}}
+\newcommand{\BCB}{\bm{\mathcal{B}}}
+\newcommand{\BCC}{\bm{\mathcal{C}}}
+\newcommand{\BCD}{\bm{\mathcal{D}}}
+\newcommand{\BCE}{\bm{\mathcal{E}}}
+\newcommand{\BCF}{\bm{\mathcal{F}}}
+\newcommand{\BCG}{\bm{\mathcal{G}}}
+\newcommand{\BCH}{\bm{\mathcal{H}}}
+\newcommand{\BCI}{\bm{\mathcal{I}}}
+\newcommand{\BCJ}{\bm{\mathcal{J}}}
+\newcommand{\BCK}{\bm{\mathcal{K}}}
+\newcommand{\BCL}{\bm{\mathcal{L}}}
+\newcommand{\BCM}{\bm{\mathcal{M}}}
+\newcommand{\BCN}{\bm{\mathcal{N}}}
+\newcommand{\BCO}{\bm{\mathcal{O}}}
+\newcommand{\BCP}{\bm{\mathcal{P}}}
+\newcommand{\BCQ}{\bm{\mathcal{Q}}}
+\newcommand{\BCR}{\bm{\mathcal{R}}}
+\newcommand{\BCS}{\bm{\mathcal{S}}}
+\newcommand{\BCT}{\bm{\mathcal{T}}}
+\newcommand{\BCU}{\bm{\mathcal{U}}}
+\newcommand{\BCV}{\bm{\mathcal{V}}}
+\newcommand{\BCW}{\bm{\mathcal{W}}}
+\newcommand{\BCX}{\bm{\mathcal{X}}}
+\newcommand{\BCY}{\bm{\mathcal{Y}}}
+\newcommand{\BCZ}{\bm{\mathcal{Z}}}
