--- a/shortsym_greek_bold.sty
+++ b/shortsym_greek_bold.sty
@@ -1,41 +1,41 @@
 % Bold Greek
-\newcommand{\Balpha  }{\boldsymbol{\alpha}        }
-\newcommand{\Bbeta   }{\boldsymbol{\beta}         }
-\newcommand{\Bgamma  }{\boldsymbol{\gamma}        }
-\newcommand{\Bdelta  }{\boldsymbol{\delta}        }
-\newcommand{\Bepsilon}{\boldsymbol{\epsilon}      }
-\newcommand{\Bvareps }{\boldsymbol{\varepsilon}   }
-\newcommand{\Bvarepsilon}{\boldsymbol{\varepsilon}}
-\newcommand{\Bzeta   }{\boldsymbol{\zeta}         }
-\newcommand{\Beta    }{\boldsymbol{\eta}          }
-\newcommand{\Btheta  }{\boldsymbol{\theta}        }
-\newcommand{\Bvarthe }{\boldsymbol{\vartheta}     }
-\newcommand{\Biota   }{\boldsymbol{\iota}         }
-\newcommand{\Bkappa  }{\boldsymbol{\kappa}        }
-\newcommand{\Blambda }{\boldsymbol{\lambda}       }
-\newcommand{\Bmu     }{\boldsymbol{\mu}           }
-\newcommand{\Bnu     }{\boldsymbol{\nu}           }
-\newcommand{\Bxi     }{\boldsymbol{\xi}           }
-\newcommand{\Bpi     }{\boldsymbol{\pi}           }
-\newcommand{\Brho    }{\boldsymbol{\rho}          }
-\newcommand{\Bvrho   }{\boldsymbol{\varrho}       }
-\newcommand{\Bsigma  }{\boldsymbol{\sigma}        }
-\newcommand{\Bvsigma }{\boldsymbol{\varsigma}     }
-\newcommand{\Btau    }{\boldsymbol{\tau}          }
-\newcommand{\Bupsilon}{\boldsymbol{\upsilon}      }
-\newcommand{\Bphi    }{\boldsymbol{\phi}          }
-\newcommand{\Bvarphi }{\boldsymbol{\varphi}       }
-\newcommand{\Bchi    }{\boldsymbol{\chi}          }
-\newcommand{\Bpsi    }{\boldsymbol{\psi}          }
-\newcommand{\Bomega  }{\boldsymbol{\omega}        }
-\newcommand{\BGamma  }{\boldsymbol{\Gamma}        }
-\newcommand{\BDelta  }{\boldsymbol{\Delta}        }
-\newcommand{\BTheta  }{\boldsymbol{\Theta}        }
-\newcommand{\BLambda }{\boldsymbol{\Lambda}       }
-\newcommand{\BXi     }{\boldsymbol{\Xi}           }
-\newcommand{\BPi     }{\boldsymbol{\Pi}           }
-\newcommand{\BSigma  }{\boldsymbol{\Sigma}        }
-\newcommand{\BUpsilon}{\boldsymbol{\Upsilon}      }
-\newcommand{\BPhi    }{\boldsymbol{\Phi}          }
-\newcommand{\BPsi    }{\boldsymbol{\Psi}          }
-\newcommand{\BOmega  }{\boldsymbol{\Omega}        }
+\newcommand{\Balpha  }{\bm{\alpha}        }
+\newcommand{\Bbeta   }{\bm{\beta}         }
+\newcommand{\Bgamma  }{\bm{\gamma}        }
+\newcommand{\Bdelta  }{\bm{\delta}        }
+\newcommand{\Bepsilon}{\bm{\epsilon}      }
+\newcommand{\Bvareps }{\bm{\varepsilon}   }
+\newcommand{\Bvarepsilon}{\bm{\varepsilon}}
+\newcommand{\Bzeta   }{\bm{\zeta}         }
+\newcommand{\Beta    }{\bm{\eta}          }
+\newcommand{\Btheta  }{\bm{\theta}        }
+\newcommand{\Bvarthe }{\bm{\vartheta}     }
+\newcommand{\Biota   }{\bm{\iota}         }
+\newcommand{\Bkappa  }{\bm{\kappa}        }
+\newcommand{\Blambda }{\bm{\lambda}       }
+\newcommand{\Bmu     }{\bm{\mu}           }
+\newcommand{\Bnu     }{\bm{\nu}           }
+\newcommand{\Bxi     }{\bm{\xi}           }
+\newcommand{\Bpi     }{\bm{\pi}           }
+\newcommand{\Brho    }{\bm{\rho}          }
+\newcommand{\Bvrho   }{\bm{\varrho}       }
+\newcommand{\Bsigma  }{\bm{\sigma}        }
+\newcommand{\Bvsigma }{\bm{\varsigma}     }
+\newcommand{\Btau    }{\bm{\tau}          }
+\newcommand{\Bupsilon}{\bm{\upsilon}      }
+\newcommand{\Bphi    }{\bm{\phi}          }
+\newcommand{\Bvarphi }{\bm{\varphi}       }
+\newcommand{\Bchi    }{\bm{\chi}          }
+\newcommand{\Bpsi    }{\bm{\psi}          }
+\newcommand{\Bomega  }{\bm{\omega}        }
+\newcommand{\BGamma  }{\bm{\Gamma}        }
+\newcommand{\BDelta  }{\bm{\Delta}        }
+\newcommand{\BTheta  }{\bm{\Theta}        }
+\newcommand{\BLambda }{\bm{\Lambda}       }
+\newcommand{\BXi     }{\bm{\Xi}           }
+\newcommand{\BPi     }{\bm{\Pi}           }
+\newcommand{\BSigma  }{\bm{\Sigma}        }
+\newcommand{\BUpsilon}{\bm{\Upsilon}      }
+\newcommand{\BPhi    }{\bm{\Phi}          }
+\newcommand{\BPsi    }{\bm{\Psi}          }
+\newcommand{\BOmega  }{\bm{\Omega}        }
