--- a/shortsym_sans.sty
+++ b/shortsym_sans.sty
@@ -52,3 +52,13 @@
 \newcommand{\Fy}{\mathsf{y}}
 \newcommand{\Fz}{\mathsf{z}}
 
+\newcommand{\Fzero }{\mathsf{0}}
+\newcommand{\Fone  }{\mathsf{1}}
+\newcommand{\Ftwo  }{\mathsf{2}}
+\newcommand{\Fthree}{\mathsf{3}}
+\newcommand{\Ffour }{\mathsf{4}}
+\newcommand{\Ffive }{\mathsf{5}}
+\newcommand{\Fsix  }{\mathsf{6}}
+\newcommand{\Fseven}{\mathsf{7}}
+\newcommand{\Feight}{\mathsf{8}}
+\newcommand{\Fnine }{\mathsf{9}}
