--- a/shortsym_sans_bold.sty
+++ b/shortsym_sans_bold.sty
@@ -53,3 +53,15 @@
 \newcommand{\BFx}{\bm{\mathsf{x}}}
 \newcommand{\BFy}{\bm{\mathsf{y}}}
 \newcommand{\BFz}{\bm{\mathsf{z}}}
+
+\newcommand{\BFzero }{\bm{\mathsf{0}}}
+\newcommand{\BFone  }{\bm{\mathsf{1}}}
+\newcommand{\BFtwo  }{\bm{\mathsf{2}}}
+\newcommand{\BFthree}{\bm{\mathsf{3}}}
+\newcommand{\BFfour }{\bm{\mathsf{4}}}
+\newcommand{\BFfive }{\bm{\mathsf{5}}}
+\newcommand{\BFsix  }{\bm{\mathsf{6}}}
+\newcommand{\BFseven}{\bm{\mathsf{7}}}
+\newcommand{\BFeight}{\bm{\mathsf{8}}}
+\newcommand{\BFnine }{\bm{\mathsf{9}}}
+
