--- a/shortsym_upright.sty
+++ b/shortsym_upright.sty
@@ -51,3 +51,15 @@
 \newcommand{\UX}{\mathrm{X}}
 \newcommand{\UY}{\mathrm{Y}}
 \newcommand{\UZ}{\mathrm{Z}}
+
+\newcommand{\Uzero }{\mathrm{0}}
+\newcommand{\Uone  }{\mathrm{1}}
+\newcommand{\Utwo  }{\mathrm{2}}
+\newcommand{\Uthree}{\mathrm{3}}
+\newcommand{\Ufour }{\mathrm{4}}
+\newcommand{\Ufive }{\mathrm{5}}
+\newcommand{\Usix  }{\mathrm{6}}
+\newcommand{\Useven}{\mathrm{7}}
+\newcommand{\Ueight}{\mathrm{8}}
+\newcommand{\Unine }{\mathrm{9}}
+
