--- a/shortsym_frak.sty
+++ b/shortsym_frak.sty
@@ -1,107 +1,129 @@
 % Fraktur
-\newcommand{\frakA}{\mathfrak{A}}
-\newcommand{\frakB}{\mathfrak{B}}
-\newcommand{\frakC}{\mathfrak{C}}
-\newcommand{\frakD}{\mathfrak{D}}
-\newcommand{\frakE}{\mathfrak{E}}
-\newcommand{\frakF}{\mathfrak{F}}
-\newcommand{\frakG}{\mathfrak{G}}
-\newcommand{\frakH}{\mathfrak{H}}
-\newcommand{\frakI}{\mathfrak{I}}
-\newcommand{\frakJ}{\mathfrak{J}}
-\newcommand{\frakK}{\mathfrak{K}}
-\newcommand{\frakL}{\mathfrak{L}}
-\newcommand{\frakM}{\mathfrak{M}}
-\newcommand{\frakN}{\mathfrak{N}}
-\newcommand{\frakO}{\mathfrak{O}}
-\newcommand{\frakP}{\mathfrak{P}}
-\newcommand{\frakQ}{\mathfrak{Q}}
-\newcommand{\frakR}{\mathfrak{R}}
-\newcommand{\frakS}{\mathfrak{S}}
-\newcommand{\frakT}{\mathfrak{T}}
-\newcommand{\frakU}{\mathfrak{U}}
-\newcommand{\frakV}{\mathfrak{V}}
-\newcommand{\frakW}{\mathfrak{W}}
-\newcommand{\frakX}{\mathfrak{X}}
-\newcommand{\frakY}{\mathfrak{Y}}
-\newcommand{\frakZ}{\mathfrak{Z}}
-\newcommand{\fraka}{\mathfrak{a}}
-\newcommand{\frakb}{\mathfrak{b}}
-\newcommand{\frakc}{\mathfrak{c}}
-\newcommand{\frakd}{\mathfrak{d}}
-\newcommand{\frake}{\mathfrak{e}}
-\newcommand{\frakf}{\mathfrak{f}}
-\newcommand{\frakg}{\mathfrak{g}}
-\newcommand{\frakh}{\mathfrak{h}}
-\newcommand{\fraki}{\mathfrak{i}}
-\newcommand{\frakj}{\mathfrak{j}}
-\newcommand{\frakk}{\mathfrak{k}}
-\newcommand{\frakl}{\mathfrak{l}}
-\newcommand{\frakm}{\mathfrak{m}}
-\newcommand{\frakn}{\mathfrak{n}}
-\newcommand{\frako}{\mathfrak{o}}
-\newcommand{\frakp}{\mathfrak{p}}
-\newcommand{\frakq}{\mathfrak{q}}
-\newcommand{\frakr}{\mathfrak{r}}
-\newcommand{\fraks}{\mathfrak{s}}
-\newcommand{\frakt}{\mathfrak{t}}
-\newcommand{\fraku}{\mathfrak{u}}
-\newcommand{\frakv}{\mathfrak{v}}
-\newcommand{\frakw}{\mathfrak{w}}
-\newcommand{\frakx}{\mathfrak{x}}
-\newcommand{\fraky}{\mathfrak{y}}
-\newcommand{\frakz}{\mathfrak{z}}
+\newcommand{\frA}{\mathfrak{A}}
+\newcommand{\frB}{\mathfrak{B}}
+\newcommand{\frC}{\mathfrak{C}}
+\newcommand{\frD}{\mathfrak{D}}
+\newcommand{\frE}{\mathfrak{E}}
+\newcommand{\frF}{\mathfrak{F}}
+\newcommand{\frG}{\mathfrak{G}}
+\newcommand{\frH}{\mathfrak{H}}
+\newcommand{\frI}{\mathfrak{I}}
+\newcommand{\frJ}{\mathfrak{J}}
+\newcommand{\frK}{\mathfrak{K}}
+\newcommand{\frL}{\mathfrak{L}}
+\newcommand{\frM}{\mathfrak{M}}
+\newcommand{\frN}{\mathfrak{N}}
+\newcommand{\frO}{\mathfrak{O}}
+\newcommand{\frP}{\mathfrak{P}}
+\newcommand{\frQ}{\mathfrak{Q}}
+\newcommand{\frR}{\mathfrak{R}}
+\newcommand{\frS}{\mathfrak{S}}
+\newcommand{\frT}{\mathfrak{T}}
+\newcommand{\frU}{\mathfrak{U}}
+\newcommand{\frV}{\mathfrak{V}}
+\newcommand{\frW}{\mathfrak{W}}
+\newcommand{\frX}{\mathfrak{X}}
+\newcommand{\frY}{\mathfrak{Y}}
+\newcommand{\frZ}{\mathfrak{Z}}
+\newcommand{\fra}{\mathfrak{a}}
+\newcommand{\frb}{\mathfrak{b}}
+\newcommand{\frc}{\mathfrak{c}}
+\newcommand{\frd}{\mathfrak{d}}
+\newcommand{\fre}{\mathfrak{e}}
+\newcommand{\frf}{\mathfrak{f}}
+\newcommand{\frg}{\mathfrak{g}}
+\newcommand{\frh}{\mathfrak{h}}
+\newcommand{\fri}{\mathfrak{i}}
+\newcommand{\frj}{\mathfrak{j}}
+\newcommand{\frk}{\mathfrak{k}}
+\newcommand{\frl}{\mathfrak{l}}
+\newcommand{\frm}{\mathfrak{m}}
+\newcommand{\frn}{\mathfrak{n}}
+\newcommand{\fro}{\mathfrak{o}}
+\newcommand{\frp}{\mathfrak{p}}
+\newcommand{\frq}{\mathfrak{q}}
+\newcommand{\frr}{\mathfrak{r}}
+\newcommand{\frs}{\mathfrak{s}}
+\newcommand{\frt}{\mathfrak{t}}
+\newcommand{\fru}{\mathfrak{u}}
+\newcommand{\frv}{\mathfrak{v}}
+\newcommand{\frw}{\mathfrak{w}}
+\newcommand{\frx}{\mathfrak{x}}
+\newcommand{\fry}{\mathfrak{y}}
+\newcommand{\frz}{\mathfrak{z}}
+
+\newcommand{\frzero }{\mathfrak{0}}
+\newcommand{\frone  }{\mathfrak{1}}
+\newcommand{\frtwo  }{\mathfrak{2}}
+\newcommand{\frthree}{\mathfrak{3}}
+\newcommand{\frfour }{\mathfrak{4}}
+\newcommand{\frfive }{\mathfrak{5}}
+\newcommand{\frsix  }{\mathfrak{6}}
+\newcommand{\frseven}{\mathfrak{7}}
+\newcommand{\freight}{\mathfrak{8}}
+\newcommand{\frnine }{\mathfrak{9}}
 
 % Fraktur bold
-\newcommand{\BfrakA}{\boldsymbol{\mathfrak{A}}}
-\newcommand{\BfrakB}{\boldsymbol{\mathfrak{B}}}
-\newcommand{\BfrakC}{\boldsymbol{\mathfrak{C}}}
-\newcommand{\BfrakD}{\boldsymbol{\mathfrak{D}}}
-\newcommand{\BfrakE}{\boldsymbol{\mathfrak{E}}}
-\newcommand{\BfrakF}{\boldsymbol{\mathfrak{F}}}
-\newcommand{\BfrakG}{\boldsymbol{\mathfrak{G}}}
-\newcommand{\BfrakH}{\boldsymbol{\mathfrak{H}}}
-\newcommand{\BfrakI}{\boldsymbol{\mathfrak{I}}}
-\newcommand{\BfrakJ}{\boldsymbol{\mathfrak{J}}}
-\newcommand{\BfrakK}{\boldsymbol{\mathfrak{K}}}
-\newcommand{\BfrakL}{\boldsymbol{\mathfrak{L}}}
-\newcommand{\BfrakM}{\boldsymbol{\mathfrak{M}}}
-\newcommand{\BfrakN}{\boldsymbol{\mathfrak{N}}}
-\newcommand{\BfrakO}{\boldsymbol{\mathfrak{O}}}
-\newcommand{\BfrakP}{\boldsymbol{\mathfrak{P}}}
-\newcommand{\BfrakQ}{\boldsymbol{\mathfrak{Q}}}
-\newcommand{\BfrakR}{\boldsymbol{\mathfrak{R}}}
-\newcommand{\BfrakS}{\boldsymbol{\mathfrak{S}}}
-\newcommand{\BfrakT}{\boldsymbol{\mathfrak{T}}}
-\newcommand{\BfrakU}{\boldsymbol{\mathfrak{U}}}
-\newcommand{\BfrakV}{\boldsymbol{\mathfrak{V}}}
-\newcommand{\BfrakW}{\boldsymbol{\mathfrak{W}}}
-\newcommand{\BfrakX}{\boldsymbol{\mathfrak{X}}}
-\newcommand{\BfrakY}{\boldsymbol{\mathfrak{Y}}}
-\newcommand{\BfrakZ}{\boldsymbol{\mathfrak{Z}}}
-\newcommand{\Bfraka}{\boldsymbol{\mathfrak{a}}}
-\newcommand{\Bfrakb}{\boldsymbol{\mathfrak{b}}}
-\newcommand{\Bfrakc}{\boldsymbol{\mathfrak{c}}}
-\newcommand{\Bfrakd}{\boldsymbol{\mathfrak{d}}}
-\newcommand{\Bfrake}{\boldsymbol{\mathfrak{e}}}
-\newcommand{\Bfrakf}{\boldsymbol{\mathfrak{f}}}
-\newcommand{\Bfrakg}{\boldsymbol{\mathfrak{g}}}
-\newcommand{\Bfrakh}{\boldsymbol{\mathfrak{h}}}
-\newcommand{\Bfraki}{\boldsymbol{\mathfrak{i}}}
-\newcommand{\Bfrakj}{\boldsymbol{\mathfrak{j}}}
-\newcommand{\Bfrakk}{\boldsymbol{\mathfrak{k}}}
-\newcommand{\Bfrakl}{\boldsymbol{\mathfrak{l}}}
-\newcommand{\Bfrakm}{\boldsymbol{\mathfrak{m}}}
-\newcommand{\Bfrakn}{\boldsymbol{\mathfrak{n}}}
-\newcommand{\Bfrako}{\boldsymbol{\mathfrak{o}}}
-\newcommand{\Bfrakp}{\boldsymbol{\mathfrak{p}}}
-\newcommand{\Bfrakq}{\boldsymbol{\mathfrak{q}}}
-\newcommand{\Bfrakr}{\boldsymbol{\mathfrak{r}}}
-\newcommand{\Bfraks}{\boldsymbol{\mathfrak{s}}}
-\newcommand{\Bfrakt}{\boldsymbol{\mathfrak{t}}}
-\newcommand{\Bfraku}{\boldsymbol{\mathfrak{u}}}
-\newcommand{\Bfrakv}{\boldsymbol{\mathfrak{v}}}
-\newcommand{\Bfrakw}{\boldsymbol{\mathfrak{w}}}
-\newcommand{\Bfrakx}{\boldsymbol{\mathfrak{x}}}
-\newcommand{\Bfraky}{\boldsymbol{\mathfrak{y}}}
-\newcommand{\Bfrakz}{\boldsymbol{\mathfrak{z}}}
+\newcommand{\BfrA}{\bm{\mathfrak{A}}}
+\newcommand{\BfrB}{\bm{\mathfrak{B}}}
+\newcommand{\BfrC}{\bm{\mathfrak{C}}}
+\newcommand{\BfrD}{\bm{\mathfrak{D}}}
+\newcommand{\BfrE}{\bm{\mathfrak{E}}}
+\newcommand{\BfrF}{\bm{\mathfrak{F}}}
+\newcommand{\BfrG}{\bm{\mathfrak{G}}}
+\newcommand{\BfrH}{\bm{\mathfrak{H}}}
+\newcommand{\BfrI}{\bm{\mathfrak{I}}}
+\newcommand{\BfrJ}{\bm{\mathfrak{J}}}
+\newcommand{\BfrK}{\bm{\mathfrak{K}}}
+\newcommand{\BfrL}{\bm{\mathfrak{L}}}
+\newcommand{\BfrM}{\bm{\mathfrak{M}}}
+\newcommand{\BfrN}{\bm{\mathfrak{N}}}
+\newcommand{\BfrO}{\bm{\mathfrak{O}}}
+\newcommand{\BfrP}{\bm{\mathfrak{P}}}
+\newcommand{\BfrQ}{\bm{\mathfrak{Q}}}
+\newcommand{\BfrR}{\bm{\mathfrak{R}}}
+\newcommand{\BfrS}{\bm{\mathfrak{S}}}
+\newcommand{\BfrT}{\bm{\mathfrak{T}}}
+\newcommand{\BfrU}{\bm{\mathfrak{U}}}
+\newcommand{\BfrV}{\bm{\mathfrak{V}}}
+\newcommand{\BfrW}{\bm{\mathfrak{W}}}
+\newcommand{\BfrX}{\bm{\mathfrak{X}}}
+\newcommand{\BfrY}{\bm{\mathfrak{Y}}}
+\newcommand{\BfrZ}{\bm{\mathfrak{Z}}}
+\newcommand{\Bfra}{\bm{\mathfrak{a}}}
+\newcommand{\Bfrb}{\bm{\mathfrak{b}}}
+\newcommand{\Bfrc}{\bm{\mathfrak{c}}}
+\newcommand{\Bfrd}{\bm{\mathfrak{d}}}
+\newcommand{\Bfre}{\bm{\mathfrak{e}}}
+\newcommand{\Bfrf}{\bm{\mathfrak{f}}}
+\newcommand{\Bfrg}{\bm{\mathfrak{g}}}
+\newcommand{\Bfrh}{\bm{\mathfrak{h}}}
+\newcommand{\Bfri}{\bm{\mathfrak{i}}}
+\newcommand{\Bfrj}{\bm{\mathfrak{j}}}
+\newcommand{\Bfrk}{\bm{\mathfrak{k}}}
+\newcommand{\Bfrl}{\bm{\mathfrak{l}}}
+\newcommand{\Bfrm}{\bm{\mathfrak{m}}}
+\newcommand{\Bfrn}{\bm{\mathfrak{n}}}
+\newcommand{\Bfro}{\bm{\mathfrak{o}}}
+\newcommand{\Bfrp}{\bm{\mathfrak{p}}}
+\newcommand{\Bfrq}{\bm{\mathfrak{q}}}
+\newcommand{\Bfrr}{\bm{\mathfrak{r}}}
+\newcommand{\Bfrs}{\bm{\mathfrak{s}}}
+\newcommand{\Bfrt}{\bm{\mathfrak{t}}}
+\newcommand{\Bfru}{\bm{\mathfrak{u}}}
+\newcommand{\Bfrv}{\bm{\mathfrak{v}}}
+\newcommand{\Bfrw}{\bm{\mathfrak{w}}}
+\newcommand{\Bfrx}{\bm{\mathfrak{x}}}
+\newcommand{\Bfry}{\bm{\mathfrak{y}}}
+\newcommand{\Bfrz}{\bm{\mathfrak{z}}}
+
+\newcommand{\Bfrzero }{\bm{\mathfrak{0}}}
+\newcommand{\Bfrone  }{\bm{\mathfrak{1}}}
+\newcommand{\Bfrtwo  }{\bm{\mathfrak{2}}}
+\newcommand{\Bfrthree}{\bm{\mathfrak{3}}}
+\newcommand{\Bfrfour }{\bm{\mathfrak{4}}}
+\newcommand{\Bfrfive }{\bm{\mathfrak{5}}}
+\newcommand{\Bfrsix  }{\bm{\mathfrak{6}}}
+\newcommand{\Bfrseven}{\bm{\mathfrak{7}}}
+\newcommand{\Bfreight}{\bm{\mathfrak{8}}}
+\newcommand{\Bfrnine }{\bm{\mathfrak{9}}}
