--- a/shortsym_upright_bold.sty
+++ b/shortsym_upright_bold.sty
@@ -1,65 +1,65 @@
 % Upright bold letters
-\newcommand{\VA}{\boldsymbol{\mathrm{A}}}
-\newcommand{\VB}{\boldsymbol{\mathrm{B}}}
-\newcommand{\VC}{\boldsymbol{\mathrm{C}}}
-\newcommand{\VD}{\boldsymbol{\mathrm{D}}}
-\newcommand{\VE}{\boldsymbol{\mathrm{E}}}
-\newcommand{\VF}{\boldsymbol{\mathrm{F}}}
-\newcommand{\VG}{\boldsymbol{\mathrm{G}}}
-\newcommand{\VH}{\boldsymbol{\mathrm{H}}}
-\newcommand{\VI}{\boldsymbol{\mathrm{I}}}
-\newcommand{\VJ}{\boldsymbol{\mathrm{J}}}
-\newcommand{\VK}{\boldsymbol{\mathrm{K}}}
-\newcommand{\VL}{\boldsymbol{\mathrm{L}}}
-\newcommand{\VM}{\boldsymbol{\mathrm{M}}}
-\newcommand{\VN}{\boldsymbol{\mathrm{N}}}
-\newcommand{\VO}{\boldsymbol{\mathrm{O}}}
-\newcommand{\VP}{\boldsymbol{\mathrm{P}}}
-\newcommand{\VQ}{\boldsymbol{\mathrm{Q}}}
-\newcommand{\VR}{\boldsymbol{\mathrm{R}}}
-\newcommand{\VS}{\boldsymbol{\mathrm{S}}}
-\newcommand{\VT}{\boldsymbol{\mathrm{T}}}
-\newcommand{\VU}{\boldsymbol{\mathrm{U}}}
-\newcommand{\VV}{\boldsymbol{\mathrm{V}}}
-\newcommand{\VW}{\boldsymbol{\mathrm{W}}}
-\newcommand{\VX}{\boldsymbol{\mathrm{X}}}
-\newcommand{\VY}{\boldsymbol{\mathrm{Y}}}
-\newcommand{\VZ}{\boldsymbol{\mathrm{Z}}}
-\newcommand{\Va}{\boldsymbol{\mathrm{a}}}
-\newcommand{\Vb}{\boldsymbol{\mathrm{b}}}
-\newcommand{\Vc}{\boldsymbol{\mathrm{c}}}
-\newcommand{\Vd}{\boldsymbol{\mathrm{d}}}
-\newcommand{\Ve}{\boldsymbol{\mathrm{e}}}
-\newcommand{\Vf}{\boldsymbol{\mathrm{f}}}
-\newcommand{\Vg}{\boldsymbol{\mathrm{g}}}
-\newcommand{\Vh}{\boldsymbol{\mathrm{h}}}
-\newcommand{\Vi}{\boldsymbol{\mathrm{i}}}
-\newcommand{\Vj}{\boldsymbol{\mathrm{j}}}
-\newcommand{\Vk}{\boldsymbol{\mathrm{k}}}
-\newcommand{\Vl}{\boldsymbol{\mathrm{l}}}
-\newcommand{\Vm}{\boldsymbol{\mathrm{m}}}
-\newcommand{\Vn}{\boldsymbol{\mathrm{n}}}
-\newcommand{\Vo}{\boldsymbol{\mathrm{o}}}
-\newcommand{\Vp}{\boldsymbol{\mathrm{p}}}
-\newcommand{\Vq}{\boldsymbol{\mathrm{q}}}
-\newcommand{\Vr}{\boldsymbol{\mathrm{r}}}
-\newcommand{\Vs}{\boldsymbol{\mathrm{s}}}
-\newcommand{\Vt}{\boldsymbol{\mathrm{t}}}
-\newcommand{\Vu}{\boldsymbol{\mathrm{u}}}
-\newcommand{\Vv}{\boldsymbol{\mathrm{v}}}
-\newcommand{\Vw}{\boldsymbol{\mathrm{w}}}
-\newcommand{\Vx}{\boldsymbol{\mathrm{x}}}
-\newcommand{\Vy}{\boldsymbol{\mathrm{y}}}
-\newcommand{\Vz}{\boldsymbol{\mathrm{z}}}
+\newcommand{\VA}{\bm{\mathrm{A}}}
+\newcommand{\VB}{\bm{\mathrm{B}}}
+\newcommand{\VC}{\bm{\mathrm{C}}}
+\newcommand{\VD}{\bm{\mathrm{D}}}
+\newcommand{\VE}{\bm{\mathrm{E}}}
+\newcommand{\VF}{\bm{\mathrm{F}}}
+\newcommand{\VG}{\bm{\mathrm{G}}}
+\newcommand{\VH}{\bm{\mathrm{H}}}
+\newcommand{\VI}{\bm{\mathrm{I}}}
+\newcommand{\VJ}{\bm{\mathrm{J}}}
+\newcommand{\VK}{\bm{\mathrm{K}}}
+\newcommand{\VL}{\bm{\mathrm{L}}}
+\newcommand{\VM}{\bm{\mathrm{M}}}
+\newcommand{\VN}{\bm{\mathrm{N}}}
+\newcommand{\VO}{\bm{\mathrm{O}}}
+\newcommand{\VP}{\bm{\mathrm{P}}}
+\newcommand{\VQ}{\bm{\mathrm{Q}}}
+\newcommand{\VR}{\bm{\mathrm{R}}}
+\newcommand{\VS}{\bm{\mathrm{S}}}
+\newcommand{\VT}{\bm{\mathrm{T}}}
+\newcommand{\VU}{\bm{\mathrm{U}}}
+\newcommand{\VV}{\bm{\mathrm{V}}}
+\newcommand{\VW}{\bm{\mathrm{W}}}
+\newcommand{\VX}{\bm{\mathrm{X}}}
+\newcommand{\VY}{\bm{\mathrm{Y}}}
+\newcommand{\VZ}{\bm{\mathrm{Z}}}
+\newcommand{\Va}{\bm{\mathrm{a}}}
+\newcommand{\Vb}{\bm{\mathrm{b}}}
+\newcommand{\Vc}{\bm{\mathrm{c}}}
+\newcommand{\Vd}{\bm{\mathrm{d}}}
+\newcommand{\Ve}{\bm{\mathrm{e}}}
+\newcommand{\Vf}{\bm{\mathrm{f}}}
+\newcommand{\Vg}{\bm{\mathrm{g}}}
+\newcommand{\Vh}{\bm{\mathrm{h}}}
+\newcommand{\Vi}{\bm{\mathrm{i}}}
+\newcommand{\Vj}{\bm{\mathrm{j}}}
+\newcommand{\Vk}{\bm{\mathrm{k}}}
+\newcommand{\Vl}{\bm{\mathrm{l}}}
+\newcommand{\Vm}{\bm{\mathrm{m}}}
+\newcommand{\Vn}{\bm{\mathrm{n}}}
+\newcommand{\Vo}{\bm{\mathrm{o}}}
+\newcommand{\Vp}{\bm{\mathrm{p}}}
+\newcommand{\Vq}{\bm{\mathrm{q}}}
+\newcommand{\Vr}{\bm{\mathrm{r}}}
+\newcommand{\Vs}{\bm{\mathrm{s}}}
+\newcommand{\Vt}{\bm{\mathrm{t}}}
+\newcommand{\Vu}{\bm{\mathrm{u}}}
+\newcommand{\Vv}{\bm{\mathrm{v}}}
+\newcommand{\Vw}{\bm{\mathrm{w}}}
+\newcommand{\Vx}{\bm{\mathrm{x}}}
+\newcommand{\Vy}{\bm{\mathrm{y}}}
+\newcommand{\Vz}{\bm{\mathrm{z}}}
 
 % bold upright numbers
-\newcommand{\Vzero }{\boldsymbol{0}}
-\newcommand{\Vone  }{\boldsymbol{1}}
-\newcommand{\Vtwo  }{\boldsymbol{2}}
-\newcommand{\Vthree}{\boldsymbol{3}}
-\newcommand{\Vfour }{\boldsymbol{4}}
-\newcommand{\Vfive }{\boldsymbol{5}}
-\newcommand{\Vsix  }{\boldsymbol{6}}
-\newcommand{\Vseven}{\boldsymbol{7}}
-\newcommand{\Veight}{\boldsymbol{8}}
-\newcommand{\Vnine }{\boldsymbol{9}}
+\newcommand{\Vzero }{\bm{0}}
+\newcommand{\Vone  }{\bm{1}}
+\newcommand{\Vtwo  }{\bm{2}}
+\newcommand{\Vthree}{\bm{3}}
+\newcommand{\Vfour }{\bm{4}}
+\newcommand{\Vfive }{\bm{5}}
+\newcommand{\Vsix  }{\bm{6}}
+\newcommand{\Vseven}{\bm{7}}
+\newcommand{\Veight}{\bm{8}}
+\newcommand{\Vnine }{\bm{9}}
